Bring back single request update in web

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <body>
         <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup>2</sup></a></h1>
         <ul>
-            <li>Total requests: {{ total_requests }}.</li>
+            <li>Total requests in Stats<sup>2</sup>: {{ total_requests }}.</li>
             <li><a href="http://instance3:8080/job/Stats2Update/">Jenkins</a></li>
             {% if page != -1 %}
             <li>Page: {{ page }}. {% if page > 0 %}<a href="/{{ page - 1 }}?{{ query }}">Previous page</a>{% endif %} <a href="/{{ page + 1 }}?{{ query }}">Next page</a></li>
@@ -61,7 +61,7 @@
                         {% if request.TotalEvents != -1 %}
                             {{ request.TotalEvents }}
                         {% else %}
-                            No data
+                            <span style="color:#FF0000"><b>No data</b></span>
                         {% endif %}
 
                     </td>
@@ -85,26 +85,14 @@
                     <td>
                         {% for dataset in request.OutputDatasets %}
                             <a href="/0?dataset={{ dataset }}">{{ dataset }}</a>&nbsp;<a href="https://cms-pdmv.cern.ch/stats/?ResToPrint=50&Page=1&Col=15-20-7-11-2-8-4-5-23-9&DN={{ dataset }}">DatasetInStats</a>
-                            <!--
-                            {% set lastHistory = request.EventNumberHistory | last %}
-                            {% if lastHistory %}
-                                {% set open = lastHistory.Datasets[dataset].OpenEvents %}
-                                {% set done = lastHistory.Datasets[dataset].DoneEvents %}
-                                {% set openPercent = open / request.TotalEvents * 100.0 %}
-                                {% set donePercent = done / request.TotalEvents * 100.0 %}
-                                <div class="gray-bar"><div style="width: {{ donePercent }}%;" class="blue-bar"></div><div style="width: {{ openPercent }}%;" class="orange-bar"></div>
-                                </div>
-                                {{ openPercent | round(2) }}%/{{ donePercent | round(2) }}%
-                                <br>
-                            {% endif %}
-                            <hr>
-                            -->
                         {% endfor %}
                     </td>
                     <td>{{ request.RequestType }}</td>
                     <td>
-                        <a href="https://cms-pdmv.cern.ch/pmp/historical?r={{ request.PrepID | replace('task_', '') }}">pMp</a><br>
-                        <a href="https://cmsweb.cern.ch/reqmgr2/data/request?name={{ request.RequestName }}">ReqMgr2</a>
+                        <a href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{ request.PrepID | replace('task_', '') }}">McM</a>
+                        <a href="https://cms-pdmv.cern.ch/pmp/historical?r={{ request.PrepID | replace('task_', '') }}">Historical&nbsp;pMp</a><br>
+                        <a href="https://cmsweb.cern.ch/reqmgr2/data/request?name={{ request.RequestName }}">ReqMgr2&nbsp;JSON</a>
+                        <a href="/update/{{ request.RequestName }}">Update&nbsp;Now</a>
                     </td>
                 </tr>
             {% endfor %}
