--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup>2</sup></a></h1>
         <ul>
             <li>Total requests in Stats<sup>2</sup>: {{ total_requests }}.</li>
-            <li>Requests without history: {{ requests_without_history }}.</li>
+            <li>Requests with and without history: {{ total_requests - requests_without_history }}/{{ requests_without_history }}.</li>
             <li><a href="http://instance3:8080/job/Stats2Update/">Jenkins update page</a></li>
         </ul>
         <table class="table" style="font-size: 0.75em">
