Sort JSON keys in view_json, make 2 red

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/metro/64/data-backup">
     </head>
     <body>
-        <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup>2</sup></a></h1>
+        <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup style="color: red;">2</sup></a></h1>
         <ul>
-            <li>Total requests in Stats<sup>2</sup>: {{ total_requests }}.</li>
+            <li>Total requests in Stats<sup style="color: red;">2</sup>: {{ total_requests }}.</li>
             <li><a href="http://instance3:8080/job/Stats2Update/">Jenkins update page</a></li>
             <li>{{ rss | safe }}</li>
         </ul>
