Update favicon url

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         }
         </style>
         <title>Stats2</title>
-        <link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/metro/64/data-backup">
+        <link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/metro/2x/data-backup.png">
     </head>
     <body>
         <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup style="color: red;">2</sup></a></h1>
