--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,15 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
         <style>
-        .orange-bar {
-            background-color:#FF6F00;
+        .open-bar {
+            background-color:#F39C12;
             line-height:10px;
             height: 10px;
             display: inline-block;
             max-width: 100%;
         }
-        .blue-bar {
-            background-color:#01579B;
+        .done-bar {
+            background-color:#26A65B;
             line-height:10px;
             height: 10px;
             display: inline-block;
@@ -30,19 +30,33 @@
             overflow: hidden;
             display: inline-block;
         }
+        .title {
+            color: #212529;
+            text-decoration: none;
+            margin: 10px;
+            font-size: 60px;
+            font-weight: 100;
+        }
+        .title:hover {
+            color: #212529;
+            text-decoration: none;
+        }
+        body {
+            font-family: 'Roboto' !important;
+        }
         </style>
         <title>Stats2</title>
         <link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/metro/2x/data-backup.png">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
     </head>
     <body>
-        <h1 style="margin: 10px;"><a style="text-decoration: none;" href="/">Stats<sup style="color: red;">2</sup></a></h1>
+        <a class="title" href="/">Stats<sup style="color: red;">2</sup></a>
         <ul>
-            <li>Total requests in Stats<sup style="color: red;">2</sup>: {{ total_requests }}.</li>
-            <li><a href="http://instance3:8080/job/Stats2Update/">Jenkins update page</a></li>
+            <li>Total requests in Stats<sup style="color: red;">2</sup>: {{ total_requests }}</li>
             <li>{{ rss | safe }}</li>
         </ul>
-        <table class="table" style="font-size: 0.75em">
-            <tr>
+        <table class="table" style="font-size: 12px">
+            <tr style="font-size: 14px">
                 <th>Request name</th>
                 <th>Links</th>
                 <th>Expected events</th>
@@ -74,10 +88,7 @@
                             {% else %}
                                 {{ request.TotalEvents }}
                             {% endif %}
-                        {% else %}
-                            <span style="color:#FF0000"><b>No data</b></span>
                         {% endif %}
-
                     </td>
                     <td>
                     {% set lastDataset = request.OutputDatasets | last %}
@@ -90,8 +101,8 @@
                         Open:&nbsp;{{ openPercent | round(2) }}%<br>Done:&nbsp;{{ donePercent | round(2) }}%
                         {% if request.TotalEventsEqual %}<br>OldStats:&nbsp;{{ request.OldCompletion }}%{% endif %}
                         <div class="gray-bar"><!--
-                         --><div style="width: {{ donePercent }}%;" class="blue-bar"></div><!--
-                         --><div style="width: {{ openPercent }}%;" class="orange-bar"></div>
+                         --><div style="width: {{ donePercent }}%;" class="done-bar"></div><!--
+                         --><div style="width: {{ openPercent }}%;" class="open-bar"></div>
                         </div>
                     {% endif %}
                     </td>
