--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,6 @@
             height: 10px;
             font-size: 0;
             overflow: hidden;
-            display: inline-block;
         }
         .title {
             color: #212529;
@@ -43,6 +42,10 @@
         }
         body {
             font-family: 'Roboto' !important;
+        }
+        td, th {
+            word-wrap: break-word;
+            max-width: 400px;
         }
         </style>
         <title>Stats2</title>
@@ -59,8 +62,7 @@
             <tr style="font-size: 14px">
                 <th>Request name</th>
                 <th>Links</th>
-                <th>Expected events</th>
-                <th>Open/Done</th>
+                <th>Total/Open/Done</th>
                 <th>PrepID</th>
                 <th>Campaign</th>
                 <th>Output Datasets</th>
@@ -82,34 +84,32 @@
                     <td>
                         {% if request.TotalEvents != -1 %}
                             {% if request.TotalEventsEqual == 'equal' %}
-                                <span title="Number is the same in Stats and Stats2" style="color:green">{{ request.TotalEvents }}</span>
+                                <span title="Number is the same in Stats and Stats2" style="color:green">Total:&nbsp;{{ request.TotalEvents }}</span>
                             {% elif request.TotalEventsEqual == 'not_equal' %}
                                 <span title="Number is different in Stats and Stats2" style="color:red">Stats<sup>2</sup>&nbsp;{{ request.TotalEvents }}<br>Stats&nbsp;{{ request.TotalEventsStats }}</span>
                             {% elif request.TotalEventsEqual == 'not_found' %}
-                                <span title="Cannot find request in Stats" style="color:cyan">{{ request.TotalEvents }}</span>
+                                <span title="Cannot find request in Stats" style="color:cyan">Total:&nbsp;{{ request.TotalEvents }}</span>
                             {% else %}
-                                {{ request.TotalEvents }}
+                                Total:&nbsp;{{ request.TotalEvents }}
                             {% endif %}
                         {% endif %}
+                        {% set lastDataset = request.OutputDatasets | last %}
+                        {% if request.TotalEvents > 0 and request.EventNumberHistory and lastDataset %}
+                            {% set lastHistory = request.EventNumberHistory | last %}
+                            {% set open = lastHistory.Datasets[lastDataset].OpenEvents %}
+                            {% set done = lastHistory.Datasets[lastDataset].DoneEvents %}
+                            {% set openPercent = open / request.TotalEvents * 100.0 %}
+                            {% set donePercent = done / request.TotalEvents * 100.0 %}
+                            <br>Open:&nbsp;{{ openPercent | round(2) }}%<br>Done:&nbsp;{{ donePercent | round(2) }}%
+                            {% if request.TotalEventsEqual %}<br>OldStats:&nbsp;{{ request.OldCompletion }}%{% endif %}
+                            <div class="gray-bar"><!--
+                             --><div style="width: {{ donePercent }}%;" class="done-bar"></div><!--
+                             --><div style="width: {{ openPercent }}%;" class="open-bar"></div>
+                            </div>
+                        {% endif %}
                     </td>
-                    <td>
-                    {% set lastDataset = request.OutputDatasets | last %}
-                    {% if request.TotalEvents > 0 and request.EventNumberHistory and lastDataset %}
-                        {% set lastHistory = request.EventNumberHistory | last %}
-                        {% set open = lastHistory.Datasets[lastDataset].OpenEvents %}
-                        {% set done = lastHistory.Datasets[lastDataset].DoneEvents %}
-                        {% set openPercent = open / request.TotalEvents * 100.0 %}
-                        {% set donePercent = done / request.TotalEvents * 100.0 %}
-                        Open:&nbsp;{{ openPercent | round(2) }}%<br>Done:&nbsp;{{ donePercent | round(2) }}%
-                        {% if request.TotalEventsEqual %}<br>OldStats:&nbsp;{{ request.OldCompletion }}%{% endif %}
-                        <div class="gray-bar"><!--
-                         --><div style="width: {{ donePercent }}%;" class="done-bar"></div><!--
-                         --><div style="width: {{ openPercent }}%;" class="open-bar"></div>
-                        </div>
-                    {% endif %}
-                    </td>
-                    <td><a href="/0?prepid={{ request.PrepID }}">{{ request.PrepID }}</td>
-                    <td><a href="/0?campaign={{ request.Campaign }}">{{ request.Campaign }}</td>
+                    <td><a href="/0?prepid={{ request.PrepID }}">{{ request.PrepID }}</a></td>
+                    <td><a href="/0?campaign={{ request.Campaign }}">{{ request.Campaign }}</a></td>
                     <td>
                         {% for dataset in request.OutputDatasets %}
                             {% if dataset == lastDataset %}<b>{% endif %}<a href="/0?dataset={{ dataset }}">{{ dataset }}</a>{% if dataset == lastDataset %}</b>{% endif %}&nbsp;<a href="https://cms-pdmv.cern.ch/stats/?ResToPrint=50&Page=1&Col=15-20-7-11-2-8-4-5-23-9&DN={{ dataset }}">Stats</a>&nbsp;<a href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod%2Fglobal&input=dataset%3D{{ dataset }}">DAS</a>
