--- a/html/static/style.css
+++ b/html/static/style.css
@@ -33,7 +33,8 @@ td, th {
   text-decoration: none;
   margin: 10px;
   font-size: 60px;
-  font-weight: 100;
+  font-weight: 300;
+  font-family: Roboto;
 }
 
 .title:hover {
