--- a/html/static/style.css
+++ b/html/static/style.css
@@ -12,7 +12,7 @@ td, th {
 }
 
 .done-bar {
-  background-color:#26A65B;
+  background-color:#3498db;
   line-height:10px;
   height: 10px;
   display: inline-block;
@@ -21,7 +21,7 @@ td, th {
 
 .gray-bar {
   width: 100px;
-  background-color:#ADADAD;
+  background-color:#bdc3c7;
   line-height:10px;
   height: 10px;
   font-size: 0;
